2017-08-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Enhanced superscript on buttons (do not use <sup>)

2017-08-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not save height of keypad or window with tabs hidden

2017-08-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Expression undo/redo

2017-08-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fixed custom font sizes
	* Default to a larger font size
	* Use '×' (00D6) as default mulitplication sign and add middle dot as alternative multiplication sign (both present in more fonts than the true multiplication dot)
	* Fixed/enhanced matrix/vector editing

2017-08-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use glib-compile-resources for ui files (makes it easier to relocate or run the application without installing)
	* Fix matrix/vector editing

2017-08-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Apply functions with more than one argument to the stack

2017-08-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Multiline expression entry

2017-08-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Percentage calculation dialog

2017-08-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Alternative simplified function edit dialog
	* Fix blurry text with GDK_SCALE > 1

2017-08-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Redesigned keypad

2017-08-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fixes for MS Windows (now compiles, and runs without apparent issues, with MinGW)

2017-07-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fixes to result image saving

2017-07-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix history operators with one selected item and selected text

2017-07-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix name input fields when cleared
	* Set max/min value in integer input field to INT_MAX/INT_MIN
	* Fix argument min/max input field
	* Parse instead of calculate values in matrix edit dialog