@@ -401,7 +401,6 @@
     </child>
     <child>
       <object class="GtkRadioMenuItem" id="menu_item_x_complex">
-        <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="label" translatable="yes">Complex</property>
         <property name="group">menu_item_x_number</property>
@@ -544,7 +543,6 @@
     </child>
     <child>
       <object class="GtkRadioMenuItem" id="menu_item_y_complex">
-        <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="label" translatable="yes">Complex</property>
         <property name="group">menu_item_y_number</property>
@@ -683,7 +681,6 @@
     </child>
     <child>
       <object class="GtkRadioMenuItem" id="menu_item_z_complex">
-        <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="label" translatable="yes">Complex</property>
         <property name="group">menu_item_z_number</property>
@@ -1902,7 +1899,6 @@ On: 1/2*pi = 0.5 pi</property>
                             </child>
                             <child>
                               <object class="GtkRadioMenuItem" id="menu_item_assumptions_complex">
-                                <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="label" translatable="yes">Complex</property>
                                 <property name="use_underline">True</property>
@@ -2685,8 +2681,8 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                             <property name="use_underline">True</property>
                           </object>
                         </child>
-                        <accelerator key="K" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <accelerator key="k" signal="activate" modifiers="GDK_MOD1_MASK"/>
+                        <accelerator key="K" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -2710,8 +2706,8 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                             <property name="use_underline">True</property>
                           </object>
                         </child>
-                        <accelerator key="H" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <accelerator key="h" signal="activate" modifiers="GDK_MOD1_MASK"/>
+                        <accelerator key="H" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -2736,8 +2732,8 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                             <property name="use_underline">True</property>
                           </object>
                         </child>
-                        <accelerator key="o" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <accelerator key="o" signal="activate" modifiers="GDK_MOD1_MASK"/>
+                        <accelerator key="o" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                       <packing>
                         <property name="expand">True</property>
