@@ -244,7 +244,6 @@
                     <property name="active">0</property>
                     <items>
                       <item translatable="yes">Number</item>
-                      <item translatable="yes">Complex Number</item>
                       <item translatable="yes">Real Number</item>
                       <item translatable="yes">Rational Number</item>
                       <item translatable="yes">Integer</item>
