@@ -1,3 +1,15 @@
+2017-08-27 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Remove assumption type complex from GUI
+
+2017-08-25 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix parse status function argument shortening and ellipsizing
+
+2017-08-24 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* New icon (mainly because of missing scalable image for the old)
+
 2017-08-23 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Enhanced superscript on buttons (do not use <sup>)
